force-app/main/default/objects/Assigned_Support_Engineer__c/Assigned_Support_Engineer__c.object-meta.xml
<CustomObject>
    <description>This Object is used to store the Additional Engineers that are added to the Account Object. JIRA CS21-1563</description>
    <label>Assigned Support Engineer</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Support Engineers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>