force-app/main/default/objects/Assigned_Support_Engineer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account to which the Engineer is assigned. JIRA CS21-1563</description>
    <inlineHelpText>Select Account to which the Engineer is assigned</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assigned Support Engineers</relationshipLabel>
    <relationshipName>Assigned_Support_Engineers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>