force-app/main/default/objects/Assigned_Support_Engineer__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JIRA CS21-1563</description>
    <inlineHelpText>Select the Engineer who needs to be assigned.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Support_Engineers</relationshipName>
    <type>Lookup</type>
</CustomField>